// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductFormService createProductFormGroup should create form group 1`] = `
Object {
  "allergens": Array [],
  "configSets": Array [],
  "description": Object {
    "de": "",
    "en": "",
    "hu": "",
  },
  "image": "",
  "isVisible": "",
  "laneId": "",
  "name": Object {
    "de": "",
    "en": "",
    "hu": "",
  },
  "productCategoryId": "",
  "productType": "",
  "supportedServingModes": Array [],
  "takeawayTax": null,
  "tax": null,
  "variants": Array [],
}
`;

exports[`ProductFormService createUnitProduct$ should create unit product 1`] = `
Object {
  "data": Object {
    "allergens": Array [
      "egg",
      "gluten",
      "mustard",
      "milk",
      "soya",
      "fish",
      "sesame",
    ],
    "configSets": Array [],
    "createdAt": "MASKED DATE",
    "deletedAt": null,
    "description": Object {
      "de": "laktató szendvics",
      "en": "laktató szendvics",
      "hu": "laktató szendvics",
    },
    "dirty": null,
    "id": "test_ADMIN_PRODUCT_IT_UNIT_PRODUCT_ID_01",
    "image": "https://archive.canadianbusiness.com/wp-content/uploads/2013/04/oldhamburger.jpg",
    "isVisible": true,
    "laneId": "lane_01",
    "name": Object {
      "de": "Hamburger",
      "en": "Hamburger",
      "hu": "Hamburger",
    },
    "position": 0,
    "productCategoryId": "PRODUCT CATEGORY ID",
    "productType": "food",
    "supportedServingModes": Array [
      "takeAway",
    ],
    "takeaway": false,
    "takeawayTax": 20,
    "tax": 27,
    "unitId": "UNIT_ID",
    "updatedAt": "MASKED DATE",
    "variants": Object {
      "items": Array [],
      "nextToken": null,
    },
  },
  "type": "insert",
}
`;

exports[`ProductFormService patchConfigSet should add configsets to form array 1`] = `Array []`;

exports[`ProductFormService updateUnitProduct$ should update unit product 1`] = `
Object {
  "data": Object {
    "allergens": Array [
      "egg",
      "gluten",
      "mustard",
      "milk",
      "soya",
      "fish",
      "sesame",
    ],
    "configSets": Array [],
    "createdAt": "MASKED DATE",
    "deletedAt": null,
    "description": Object {
      "de": "laktató szendvics",
      "en": "laktató szendvics",
      "hu": "laktató szendvics",
    },
    "dirty": null,
    "id": "test_ADMIN_PRODUCT_IT_UNIT_PRODUCT_ID_01",
    "image": "https://archive.canadianbusiness.com/wp-content/uploads/2013/04/oldhamburger.jpg",
    "isVisible": false,
    "laneId": "lane_01",
    "name": Object {
      "de": "Hamburger",
      "en": "Hamburger",
      "hu": "Hamburger",
    },
    "position": 0,
    "productCategoryId": "PRODUCT CATEGORY ID",
    "productType": "food",
    "supportedServingModes": Array [
      "inPlace",
    ],
    "takeaway": false,
    "takeawayTax": 20,
    "tax": 27,
    "unitId": "test_ADMIN_PRODUCT_IT_UNIT_PRODUCT_ID_01",
    "updatedAt": "MASKED DATE",
    "variants": Object {
      "items": Array [],
      "nextToken": null,
    },
  },
  "type": "update",
}
`;
